Hide overflow-x to prevent horizontal scroll bars
Bars are caused by full-width Gutenberg blocks. For #91.

--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@ body {
 	font-weight: 400;
 	line-height: 1.625;
 	margin: 0;
+	overflow-x: hidden;
 }
 
 button,
